--- a/config/database.yml
+++ b/config/database.yml
@@ -5,7 +5,7 @@
 #   gem 'sqlite3'
 development:
   host: localhost
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: wikicleta_development
   pool: 5
@@ -31,7 +31,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: ciudadio_test
   pool: 5
@@ -39,7 +39,7 @@ test:
   password:
 
 production:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
   database: wikicleta
   pool: 5
