Preparations for publishing ongoing: Included to sprockets most assets so far, improved deficient UIX

--- a/config/database.yml
+++ b/config/database.yml
@@ -43,6 +43,6 @@ production:
   encoding: unicode
   database: wikicleta
   pool: 5
-  username: froyo
-  password: helado
+  username: spalatin
+  password: 
 
