--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -236,3 +236,4 @@
 !binary "YWN0aXZlX2FkbWluL29yZGVyYWJsZS5wbmc=": active_admin/orderable-d9e1503253eff94adee978d6f43f2409.png
 !binary "YWN0aXZlX2FkbWluL2FwcGxpY2F0aW9uLmpz": active_admin/application-5a796ebfa33734f4a5bdc90346bb4ddc.js
 !binary "YWN0aXZlX2FkbWluL3BhZ2VzL2FwcGxpY2F0aW9uLmpz": active_admin/pages/application-de3951344ec2c98e491b2ac9abc90edb.js
+!binary "YWN0aXZlX2FkbWluL3ByaW50LmNzcw==": active_admin/print-7b347ff6243b03b0ea5615a7c624e027.css
