--- a/config/database.yml
+++ b/config/database.yml
@@ -31,6 +31,7 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
+  host: localhost
   adapter: postgis
   encoding: unicode
   database: wikicleta_test
